# dingdawg-agent-1

./: .codexignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.bridges  Dockerfile.dashboard  Dockerfile.gateway  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  render.yaml
gateway/: .dockerignore  .env.example  .mcp.json  Dockerfile  Makefile  Procfile  cors_middleware.py  docker-compose.dev.yml  docker-compose.yml  email_validator.py  pyproject.toml  railway.json  railway.toml  requirements-dev.txt  requirements.txt  server.json  setup-stripe.sh  setup_env.sh  smart_sanitizer.py
gateway/.github/workflows/: ci.yml  deploy.yml
gateway/docs/: DINGDAWG_MAIN_ACCEPTANCE_TESTS.yaml  DINGDAWG_MAIN_DONE_DEFINITION.md  PRODUCT_ACCEPTANCE_TESTS.yaml  PRODUCT_DONE_DEFINITION.md  PROJECT_SCHOOL_ACCEPTANCE_TESTS.yaml  PROJECT_SCHOOL_DONE_DEFINITION.md  RESEARCH_AGENT_SKILLS_COMPETITIVE_ANALYSIS.md  SMOKE_TEST_CHECKLIST.md  STRUCTURAL_PRINCIPLES_BREAKDOWN.md
gateway/frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
gateway/frontend/e2e/: admin-dashboard.spec.ts  agent-claim-flow.spec.ts  agent1-e2e.spec.ts  auth-flows.spec.ts  billing-business-ready.spec.ts  bot-prevention-security.spec.ts  calendar-tts-integrations.spec.ts  dingdawg-app-journey.spec.ts  dingdawg-marketing-site.spec.ts  financial-ledger-cli.spec.ts  full-feature-flows.spec.ts  gaming.spec.ts  marketplace-e2e.spec.ts  new-features-e2e.spec.ts  onboarding.spec.ts  protected-pages-smoke.spec.ts  pwa-enhanced.spec.ts  pwa.spec.ts  real-world-smoke.spec.ts  real-world-stranger-journey.spec.ts  skill-verification-api.spec.ts  streaming-chat.spec.ts  visual-regression.spec.ts  widget-business-ready.spec.ts  widget-real-world.spec.ts
gateway/frontend/playwright-report/: index.html
gateway/frontend/public/: browserconfig.xml  manifest.json  offline.html  robots.txt  sitemap.xml  sw.js
gateway/frontend/scripts/: generate-icons.js  generate-icons.sh  generate-screenshots.js  generate-splash.js
gateway/frontend/src/: middleware.ts
gateway/isg_agent/: __init__.py  __main__.py  app.py  config.py
gateway/isg_agent/api/: __init__.py  app.py  deps.py  websocket.py
gateway/isg_agent/auth/: __init__.py  email_verification.py  password_reset.py
gateway/isg_agent/db/: __init__.py  engine.py  queries.py  schema.py
gateway/isg_agent/mcp/: auth.py  models.py  receipt.py  run_server.py  server.py
gateway/isg_agent/models/: __init__.py  anthropic_provider.py  context_firewall.py  google_provider.py  intelligent_router.py  mercury_provider.py  ollama_provider.py  openai_provider.py  provider.py  registry.py  router.py  routing_metrics.py
gateway/isg_agent/payments/: __init__.py  middleware.py  stripe_client.py  (+3 more)
gateway/scripts/: deploy_check.sh  deploy_checklist.py  health_monitor.py  healthcheck.sh  smoke-test.sh  start.sh  verify-env.sh
gateway/tests/: __init__.py  conftest.py  test_acp_handler.py  test_acp_routes.py  test_admin_api.py  test_admin_api_coverage.py  test_admin_security.py  test_agent.py  test_agent_identity.py  test_agent_preamble.py  test_agent_registry.py  test_agent_trigger.py  test_analytics.py  test_api_agents.py  test_api_contracts.py  test_api_integrations.py  test_api_marketplace.py  test_api_notify_integrations.py  test_api_tasks.py  test_api_templates.py  test_appointments_calendar.py  test_audit.py  test_auth_mfa.py  test_auth_passkey.py  test_bot_prevention.py  test_brain_extras.py  test_brand_verification.py  test_builtin_business_skills.py  test_business_ops_api.py  test_cap1_proactive_ops.py  test_cap2_payments.py  test_cap3_conversations.py  test_cap4_client_intelligence.py  test_cap5_staff_ops.py  test_cap6_marketing.py  test_capability_bridge.py  test_channels.py  test_cli_invoke.py  test_comms_encryption.py  test_comms_protocol.py  (+78 more)
gateway/utils/: coding_improvement_engine.py
(+357 files in other folders)
