[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isg-agent"
version = "0.1.0"
description = "ISG Agent 1 — Intelligent agent gateway by Innovative Systems Global"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Innovative Systems Global LLC"},
]
keywords = ["agent", "ai", "gateway", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "aiosqlite>=0.20.0",
    "stripe>=8.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.25.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "qrcode[pil]>=7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
isg-agent = "isg_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["isg_agent*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert used (acceptable in tests)
    "S104",  # binding to all interfaces (intentional for containers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]

